[package]
name = "pallet-mq-runtime-api"
version = "0.1.0"
edition = "2018"

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", rev = "09c016ba0a77f00a662dcd6ea76e5a5c777f31f4", default-features = false }
phala-mq = { path = "../../../crates/phala-mq", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
]
