[package]
name = "polkadot-service"
rust-version = "1.60"
version = "0.9.40"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
beefy = { package = "sc-consensus-beefy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
mmr-gadget = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.40" }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
grandpa_primitives = { package = "sp-consensus-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

# External Crates
futures = "0.3.21"
hex-literal = "0.3.4"
gum = { package = "tracing-gum", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kvdb = "0.13.0"
kvdb-rocksdb = { version = "0.17.0", optional = true }
parity-db = { version = "0.4.4", optional = true }

async-trait = "0.1.57"
lru = "0.9"
log = "0.4.17"

# Polkadot
polkadot-node-core-parachains-inherent = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-client = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", default-features = false, optional = true }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-rpc = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-node-subsystem-types = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }

# Polkadot Runtime Constants
polkadot-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
kusama-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
westend-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }

# Polkadot Runtimes
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
westend-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }

# Polkadot Subsystems
polkadot-approval-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-availability-bitfield-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-availability-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-availability-recovery = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-collator-protocol = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-dispute-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-gossip-support = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-network-bridge = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-collation-generation = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-approval-voting = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-av-store = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-backing = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-bitfield-signing = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-candidate-validation = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-chain-api = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-chain-selection = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-dispute-coordinator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-provisioner = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-pvf-checker = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }
polkadot-statement-distribution = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40", optional = true }

[dev-dependencies]
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.40" }
env_logger = "0.9.0"
assert_matches = "1.5.0"
tempfile = "3.2"

[features]
default = ["db", "full-node", "polkadot-native"]

db = [
	"service/rocksdb"
]

full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"polkadot-client",
	"polkadot-collator-protocol",
	"polkadot-dispute-distribution",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-chain-selection",
	"polkadot-node-core-dispute-coordinator",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"polkadot-node-core-pvf-checker",
	"kvdb-rocksdb",
	"parity-db",
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
polkadot-native = [ "polkadot-runtime", "polkadot-runtime-constants", "polkadot-client/polkadot" ]
kusama-native = [ "kusama-runtime", "kusama-runtime-constants", "polkadot-client/kusama" ]
westend-native = [ "westend-runtime", "westend-runtime-constants", "polkadot-client/westend" ]
rococo-native = [ "rococo-runtime", "rococo-runtime-constants", "polkadot-client/rococo" ]

runtime-benchmarks = [
	"polkadot-runtime?/runtime-benchmarks",
	"kusama-runtime?/runtime-benchmarks",
	"westend-runtime?/runtime-benchmarks",
	"rococo-runtime?/runtime-benchmarks",

	"service/runtime-benchmarks",
]
try-runtime = [
	"polkadot-runtime?/try-runtime",
	"kusama-runtime?/try-runtime",
	"westend-runtime?/try-runtime",
	"rococo-runtime?/try-runtime",
]
fast-runtime = [
	"polkadot-runtime?/fast-runtime",
	"kusama-runtime?/fast-runtime",
	"westend-runtime?/fast-runtime",
	"rococo-runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"polkadot-client/runtime-metrics",
	"rococo-runtime?/runtime-metrics",
	"westend-runtime?/runtime-metrics",
	"kusama-runtime?/runtime-metrics",
	"polkadot-runtime?/runtime-metrics",
	"polkadot-runtime-parachains/runtime-metrics"
]
